--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
-.main {
+.ravshan{
   width: 80%;
   height: 400px;
-  background-color: red;
+  background-color: blue;
   border-radius: 20px;
   margin: 0 auto;
-  margin-bottom: 50px;
 }
